--- a/windows/security/threat-protection/windows-defender-application-control/index.yml
+++ b/windows/security/threat-protection/windows-defender-application-control/index.yml
@@ -86,7 +86,7 @@ landingContent:
     linkLists:
       - linkListType: overview
         links:
-          - text: Signed policies
+          - text: Using signed policies to protect against tampering
             url: use-signed-policies-to-protect-windows-defender-application-control-against-tampering.md
           - text: Audit and enforce policies
             url: audit-and-enforce-windows-defender-application-control-policies.md
