--- a/windows/security/threat-protection/windows-defender-application-control/index.yml
+++ b/windows/security/threat-protection/windows-defender-application-control/index.yml
@@ -38,7 +38,7 @@ landingContent:
             url: microsoft-recommended-block-rules.md
           - text: Recommended driver blocks 
             url: microsoft-recommended-driver-block-rules.md
-          - text: Example policies
+          - text: Example WDAC policies
             url: example-wdac-base-policies.md
           - text: LOB Win32 apps on S Mode
             url: LOB-win32-apps-on-s.md
