--- a/windows/security/threat-protection/windows-defender-application-control/index.yml
+++ b/windows/security/threat-protection/windows-defender-application-control/index.yml
@@ -34,7 +34,7 @@ landingContent:
         links:
           - text: Using code signing to simplify application control
             url: use-code-signing-to-simplify-application-control-for-classic-windows-applications.md
-          - text: Recommended blocks 
+          - text: Microsoft's Recommended Blocklist
             url: microsoft-recommended-block-rules.md
           - text: Microsoft's Recommended Driver Blocklist
             url: microsoft-recommended-driver-block-rules.md
