--- a/windows/security/threat-protection/windows-defender-application-control/TOC.yml
+++ b/windows/security/threat-protection/windows-defender-application-control/TOC.yml
@@ -1,5 +1,8 @@
 - name: Application Control for Windows
+  href: index.yml
+- name: About application control for Windows
   href: windows-defender-application-control.md
+  expanded: true
   items: 
     - name: WDAC and AppLocker Overview
       href: wdac-and-applocker-overview.md
