--- a/windows/hub/indexnew.yml
+++ b/windows/hub/indexnew.yml
@@ -42,18 +42,20 @@ productDirectory:
   title: Discover Windows 11 # < 60 chars (optional)
   summary: Use the following information to learn more about Windows 11 # < 160 chars (optional)
   items:
-    # Card
-    - title: Learn about Windows 11
-      # imageSrc should be square in ratio with no whitespace
+  # Card
+    - title: What's new in Windows 11
       imageSrc: /windows/resources/images/winlogo.svg
-      links:
-        - url: /windows/whats-new/whats-new-in-windows-11
-          text: What's new in Windows 11
-        - url: /windows/whats-new/windows-11-overview
-          text: Windows 11 overview
-        - url: /windows/whats-new/windows-11-requirements
-          text: Windows 11 requirements        
-
+      summary: Discover what's new in Windows 11
+      url: /windows/whats-new/whats-new-in-windows-11
+    - title: Windows 11 overview
+      imageSrc: /windows/resources/images/winlogo.svg
+      summary: Learn more about Windows 11
+      url: /windows/whats-new/windows-11-overview
+    - title: Windows 11 requirements
+      imageSrc: /windows/resources/images/winlogo.svg
+      summary: Learn more about the Windows 11 requirements
+      url: /windows/whats-new/windows-11-requirements
+      
 # conceptualContent section (optional)
 conceptualContent:
 # Supports up to 3 sections
