--- a/windows/whats-new/TOC.yml
+++ b/windows/whats-new/TOC.yml
@@ -5,7 +5,7 @@
   items:
     - name: Windows 11 overview
       href: windows-11-features-overview.md
-    - name: ORIG overview
+    - name: ORIG overview-DELETE
       href: windows-11.md
     - name: Windows 11 requirements
       href: windows-11-requirements.md
