--- a/windows/whats-new/index.yml
+++ b/windows/whats-new/index.yml
@@ -27,8 +27,8 @@ landingContent:
     linkLists:
       - linkListType: overview
         links:
-          - text: Windows 11 overview
-            url:  windows-11.md
+          - text: What's new
+            url:  windows-11-whats-new.md
           - text: Windows 11 requirements
             url: windows-11-requirements.md
           - text: Plan for Windows 11 
