--- a/windows/deployment/TOC.yml
+++ b/windows/deployment/TOC.yml
@@ -15,7 +15,7 @@
           href: update/quality-updates.md
         - name: Basics of Windows updates, channels, and tools
           href: update/get-started-updates-channels-tools.md
-        - name: Servicing the Windows 10 operating system
+        - name: Prepare servicing strategy for Windows client updates
           href: update/waas-servicing-strategy-windows-10-updates.md
 
         - name: Deployment proof of concept
@@ -47,7 +47,7 @@
           href: update/plan-determine-app-readiness.md 
         - name: Define your servicing strategy
           href: update/plan-define-strategy.md
-        - name: Delivery Optimization for Windows 10 updates
+        - name: Delivery Optimization for Windows client updates
           href: update/waas-delivery-optimization.md
           items:
             - name: Using a proxy with Delivery Optimization
@@ -85,9 +85,9 @@
           href: update/update-policies.md
         - name: Update Baseline
           href: update/update-baseline.md
-        - name: Set up Delivery Optimization for Windows 10 updates
+        - name: Set up Delivery Optimization for Windows client updates
           href: update/waas-delivery-optimization-setup.md
-        - name: Configure BranchCache for Windows 10 updates
+        - name: Configure BranchCache for Windows client updates
           href: update/waas-branchcache.md
         - name: Prepare your deployment tools
           items:
